# Harverster

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  Dockerfile.prod  README.md  dev.docker-compose.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  example.env  manage.py  pyproject.toml  pytest.ini  requirements.txt
adapters/geonode/: apps.py  client.py  models.py
adapters/geonode/tests/: test_geonode_client.py
adapters/grafana/: apps.py  client.py
adapters/grafana/tests/: test_grafana_client.py
adapters/orthanc/: apps.py  client.py
adapters/orthanc/tests/: test_orthanc_client.py
core/: admin.py  clients.py  controllers.py  database_router.py  exceptions.py  models.py  tasks.py  utils.py
core/migrations/: 0001_initial.py
core/tests/: test_controller.py  test_resource.py  test_tasks.py  test_utils.py
core/tests/factories/: resource_mapping.py
docker/: default.conf  entrypoint-celery.sh  entrypoint-prod.sh  entrypoint.sh
docs/: conf.py  index.rst  make.bat
docs/modules/: about.rst  clients.rst  configuration.rst  installation.rst  models.rst
harvester/: celery.py  settings.py
