[tool.poetry]
name = "Harvester"
version = "0.1.0"
description = ""
authors = ["Whiteaster <admin@whiteaster.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
Celery = "^4.4.7"
redis = "^3.5.3"
flower = "^0.9.5"
gunicorn = "^20.0.4"
djangorestframework = "^3.11.1"
python-dotenv = "^0.14.0"
psycopg2-binary = "^2.8.6"
sqlparse = "^0.3.1"
django-environ = "^0.4.5"
django-celery-beat = "^2.0.0"
django-celery-results = "^1.2.1"
pydataverse = {git = "https://gitlab.whiteaster.com/public_data/pydataverse-upgrade.git"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
